--- a/css/style.css
+++ b/css/style.css
@@ -31,7 +31,7 @@
 .container {
   position: relative;
   width: 100%;
-  max-width: 960px;
+  /*max-width: 960px;*/
   margin: 0 auto;
   padding: 0 20px;
   box-sizing: border-box; }
@@ -44,17 +44,17 @@
 /* For devices larger than 400px */
 @media (min-width: 400px) {
   .container {
-    width: 85%;
+    width: 98%;
     padding: 0; }
 }
 
 /* For devices larger than 550px */
 @media (min-width: 550px) {
   .container {
-    width: 80%; }
+    width: 98%; }
   .column,
   .columns {
-    margin-left: 4%; }
+    margin-left: 2%; }
   .column:first-child,
   .columns:first-child {
     margin-left: 0; }
@@ -379,6 +379,16 @@ hr {
   border-width: 0;
   border-top: 1px solid #E1E1E1; }
 
+.down-arrow {
+  position: absolute;
+  display: block;
+  width: 50px;
+  margin-left: 50%;
+  margin-right: 50%;
+  transform: translate(-50%, -50%);
+  bottom: -10px;
+}
+
 
 /* Clearing
 –––––––––––––––––––––––––––––––––––––––––––––––––– */
@@ -394,31 +404,137 @@ hr {
   /* Layout
   –––––––––––––––––––––––––––––––––––––––––––––––––– */
 
+  section {
+    position: relative;
+    overflow: hidden;
+  }
+
+  #startPage {
+    height: 100vh;
+    background-color: rgb(182,182,182);
+  }
+
+  #title {
+    text-align: center;
+    font-size: 300%;
+    font-family: Helvetica, Arial, sans-serif;
+    line-height: 300%;
+  }
+
   #pictureViewport {
     height:100vh;
   }
+
   #map {
     height: 85vh;
-    margin-top: 15vh;
   }
 
   #slider {
     position: relative;
     margin: 20px;
     height: 30px;
+    max-width: 960px;
+  }
+
+  #slider2 {
+    position: absolute;
+    height: 40px;
     width: 45%;
     max-width: 960px;
   }
-  
+
+  #overlay { /* we set all of the properties for are overlay */
+    height:100%;
+    width:100%;
+    position: absolute;
+    margin:0 auto;
+    background: rgba(125,125,125,0.7);
+  }
+
+  #overlayBox { /* we set all of the properties for are overlay */
+    max-height:80%;
+    overflow: scroll;
+    overflow-x: hidden;
+    width:80%;
+    margin:0 auto;
+    background: rgba(125,125,125,0.8);
+    color:black;
+    padding:10px;
+    position:absolute;
+    top:5%;
+    left:10%;
+    z-index:1000;
+    /* CSS 3 */
+    -webkit-border-radius:10px;
+    -moz-border-radius:10px;
+    -o-border-radius:10px;
+    border-radius:10px;
+  }
+
+  #overlayBox::-webkit-scrollbar {
+    width: 1em;
+    margin: 5px;
+
+    -webkit-border-radius:10px;
+    -moz-border-radius:10px;
+    -o-border-radius:10px;
+    border-radius:10px;
+  }
+
+  #overlayBox::-webkit-scrollbar-track {
+    -webkit-box-shadow: inset 0 0 6px rgba(0,0,0,0.3);
+
+    -webkit-border-radius:10px;
+    -moz-border-radius:10px;
+    -o-border-radius:10px;
+    border-radius:10px;
+  }
+
+  #overlayBox::-webkit-scrollbar-thumb {
+    background-color: black;
+
+    -webkit-border-radius:10px;
+    -moz-border-radius:10px;
+    -o-border-radius:10px;
+    border-radius:10px;
+  }
+
+/* Start Page
+–––––––––––––––––––––––––––––––––––––––––––––––––– */
+
+.intro-content {
+  /*display: flex ;*/
+  width: 80%;
+  margin: 0 auto;
+}
+
+.intro-context img,
+.intro-text {
+  display: inline-block;
+}
+
+.intro-content img {
+  width: 40%;
+  margin-right: 50px;
+}
+
+.intro-text {
+  width: 54%;
+  font-size: 13px;
+  vertical-align: top;
+}
+
+
    /* PictureViewport
   –––––––––––––––––––––––––––––––––––––––––––––––––– */
 
 #pictureViewport {
-  /*overflow:hidden;*/
+  overflow: auto;
 }
 
 .photoset {
   display: none;
+  position: relative;
 }
 
 .photoset.visible {
@@ -428,7 +544,6 @@ hr {
 .photo {
   display: block;
   width: 33.3%;
-  height: 150px;
   overflow: hidden;
 }
 .photo:hover {
@@ -438,8 +553,22 @@ hr {
   max-width: 100%;
   height: auto;
 }
+.photo img.loading {
+  position: absolute;
+  left: 50%;
+  margin-left: -20px;
+  width: 40px;
+}
+
+.photoBox {
+  background-color: #000;
+  box-shadow: 0 8px 17px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.19); 
+}
 
 .photoBox img {
+  margin-left: 50%;
+  margin-right: 50%;    
+  transform: translate(-50%, 10%);
   max-height: 95%;
 }
 .photoBox .close {
@@ -451,4 +580,176 @@ hr {
   padding: 1px;
   text-align: left;
   border-radius: 0px;
+}
+
+/* links
+–––––––––––––––––––––––––––––––––––––––––––––––––– */
+
+#mapLink .bottomArrow{
+  position: absolute;
+}
+
+#photoBrowserLink {
+
+}
+
+/* photo network
+–––––––––––––––––––––––––––––––––––––––––––––––––– */
+
+#photoNetwork {
+  background-color: rgb(200,200,200);
+  height: 100vh;
+  margin-top: 0vh;
+}
+
+.imageContainer {
+  position: absolute;
+  top: 0;
+  background: black;
+  width: 100%;
+  height: 100%;
+  z-index: 2;
+}
+
+.photoImage {
+  position: absolute;
+  height: 80%;
+  top: 50%;
+  left: 50%;
+  margin-right: 50%;
+  max-width: 80%;
+  transform: translate(-50%, -50%);
+  z-index: 1;
+}
+
+.loupe { 
+  background-color:#555; 
+  background:rgba(0, 0, 0, 0.25); 
+  border:5px solid rgba(0, 0, 0, 0); 
+  cursor:url(blank.png), url(blank.cur), none; 
+  z-index: 30;
+}
+
+.closeImage {
+  width: 50px;
+  height: 50px;
+  margin: 10px;
+  float: right;
+}
+
+/*.closeImage:hover {
+  background-color: rgb(200,200,200);
+  border-radius: 25px;
+}
+*/
+
+.savedPhotosButton {
+  position: absolute;
+  width: 100px;
+  height: 100px;
+  top: 0;
+  right: 0;
+  margin: 10px;
+  overflow: auto;
+}
+
+.savedPhotoImages {
+  width: 100%;
+  margin: 10px;
+}
+
+.leftButton {
+  width: 50px;
+  height: 50px;
+  margin: 10px;
+  margin-top: 50vh;
+  float: left;
+  position: absolute;
+}
+
+.leftButton:hover {
+  width: 55px;
+  height: 55px;
+}
+
+.rightButton {
+  width: 50px;
+  height: 50px;
+  position: absolute;
+  margin: 10px;
+  right: 0;
+  top: 50vh;
+}
+
+.rightButton:hover {
+  width: 55px;
+  height: 55px;
+}
+
+.saveImage {
+  width: 50px;
+  height: 50px;
+  margin: 10px;
+}
+
+.saveImage:hover {
+  width: 55px;
+  height: 55px;
+  margin: 10px;
+  margin-top: 80
+  float: left;
+}
+
+.saved-browser {
+  display:none;
+  position: absolute;
+  top: 0; right: 0;
+  width: 30%;
+  height: 100vh;
+  background-color: white;
+  overflow: auto;
+}
+
+.photoDescription {
+  color: white;
+  height: 100px;
+  width: 80%;
+  text-align: center;
+  left: 50%;
+  margin-right: 50%;
+  transform: translate(-50%,0);
+  top: 0;
+  position: absolute;
+  z-index: 3;
+}
+
+.photoIndex {
+  color: white;
+  height: 100px;
+  width: 80%;
+  text-align: center;
+  left: 50%;
+  margin-right: 50%;
+  transform: translate(-50%,0);
+  bottom: 0;
+  position: absolute;
+  z-index: 3;
+}
+
+.node circle {
+  cursor: pointer;
+  stroke: #3182bd;
+  stroke-width: 1.5px;
+}
+
+.node text {
+  font: 10px sans-serif;
+  pointer-events: none;
+  text-anchor: middle;
+}
+
+line.link {
+  fill: none;
+  stroke: #9ecae1;
+  stroke-width: 1.5px;
 }
